added table design

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,16 @@
             </thead>
             <tbody>
                 <tr> 
-                    
+                    <td><%= list.id %></td>
+                    <td><%= list.ime %></td>
+                    <td><%= list.prezime %></td>
+                    <td><%= list.img %></td>
+                    <td><%= list.spol %></td>
+                    <td><%= list.godRod %></td>
+                    <td><%= list.pocetakRada %></td>
+                    <td><%= list.vrstaUgovora %></td>
+                    <td><%= list.trajanjeUgovora %></td>
+                    <td><%= list.odjel %></td>
                     <td>
                         <a href="/edit" class="btn border-shadow update">
                             <span><i class="fas fa-pencil-alt"></i></span>
